<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>    

    <string name="app_name">HealthServeSymptomChecker</string>
    
    <string name="fb_app_id">1556520331297413</string>
    
    <string name="sign_fb">Sign in with facebook</string>
    <string name="sign_google">Sign in with google</string>
    
    <string name="login">LOGIN</string>
    <string name="login_button">Sign in</string>
    <string name="signup_button">Sign Up</string>
    <string name="username_hint">username</string>
    <string name="password_hint">******</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="name_hint">firstname lastname</string>
    <string name="pass_hint">password</string>
    <string name="re_enter_pass_hint">retype password</string>
    <string name="mobile_hint">1234567890</string>
    <string name="email_hint">abc@emaildomain.com</string>
    <string name="already_have_login">Already Have Login</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="flip_image">Flip Image</string>
    <string name="zoom_out">Zoom Out</string>
    
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="zip">Zip</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit_details">Submit Details</string>
    <string name="symptom_chekcer">Symptom Chekcer</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="pedometer">Pedometer</string>
    <string name="sugar_chekcer">Sugar Chekcer</string>
    <string name="bp_chekcer">BP Chekcer</string>
    
    <string name="choose_body_part">Choose Body Part</string>    
    <string name="no_speciality">No Speciality Found</string>
    <string name="no_speciality_doc">No Speciality Doctors</string>
    
    <string name="date">Date</string>
    <string name="time_of_appointment">Time of Appointment</string>
    
    <string name="select">Select</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    
    <string name="select_date">Select Date</string>
    <string name="add_sugar">Add Sugar</string>
    <string name="add_bp">Add BP</string>
    
    <string name="submit">Submit</string>
    <string name="more_info">more info</string>
    
    <string name="type1">US Units</string>
    <string name="type2">Metric Units</string>
    <string name="enter_weight">Weight</string>
    <string name="enter_height">Height</string>
    <string name="calculate">Calculate</string>
    <string name="bmi_chart">BMI Chart</string>
    <string name="your_bmi_is">Your BMI is </string>
    
    <string name="height_in">Height in </string>
    <string name="height_cms">Height in cms</string>
    <string name="weight_kg">Weight in kgs</string>
    <string name="weight_in">Weight in </string>
    <string name="height_inchs">Height in inches</string>
    <string name="weight_pound">Weight in pounds</string>
    <string name="cms">cms</string>
    <string name="ft">ft</string>
    <string name="kgs">kgs</string>
    <string name="lb">lb</string>
    <string name="zero">0</string>
    
     <string-array name="type_slot_names">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
   		<item>Night</item>
	</string-array>
	
     <string-array name="height_in_">
        <item>CM</item>
        <item>FT</item>
	</string-array>
	
     <string-array name="weight_in_">
        <item>KG</item>
        <item>PD</item>
	</string-array>
     
     <string-array name="blood_group">
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
	</string-array>
	
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese">Obese</string>
    <string name="overobese">Over Obese</string>
	
    <string name="underweight_val">&lt;20</string>
    <string name="normal_val">20 &#8211; 25</string>
    <string name="overweight_val">25 &#8211; 30</string>
    <string name="obese_val">30 &#8211; 40</string>
    <string name="overobese_val">&gt;40</string>
	
	<string name="chosen">You have chosen the </string>
    <string name="carry_on">click the button below to carry on to the registration page.</string>
    <string name="your_otp">Your OTP Here</string>
    <string name="we_will_verify">We will be verifying the phone number:</string>
    <string name="is_this_ok">Is this OK, or would you like to edit the number?</string>
    <string name="waiting_for_auto_sms_detect">Waiting to automatically detect an SMS sent to</string>
    <string name="make_sure_sms_working">Please make sure you have a working SMS plan</string>
    <string name="sit_back_and_relax">Sit back and relax. We\'ll notify you when we\'re done verifying.</string>
    <string name="auto_msg_verification_failed">Auto SMS verification failed. Please enter OTP if you have received.</string>
    <string name="verify">Verify</string>
    
    <string name="host_url">http://174.122.37.171/android/symptom_checker/</string>
    <string name="host_url1">http://www.healthserve.in/android/symptom_checker/</string>
    <string name="login_check_php">login_check.php</string>
    <!--<string name="get_symptoms_php">get_symptoms.php</string>-->
    <string name="get_symptoms_php">v_get_symptoms.php</string>
    <string name="get_doctor_php">get_doctor.php</string>
    <string name="get_particular_doctor_php">get_particular_doctor.php</string>
    <string name="get_test_php">test.php</string>
    <string name="get_verify_otp_php">verify_otp.php</string>
    <string name="check_social_login_exists_php">check_social_login_exists.php</string>
    <string name="check_hs_login_exists_php">check_hs_login_exists.php</string>
    <string name="get_register_user_with_otp_php">register_user_with_otp.php</string>
    <string name="check_otp_php">check_otp.php</string>
    <string name="vtest_php">vtest.php</string>
    <string name="book_appointment_php">book_appointment.php</string>
    
    <string name="dot">.</string>
    <string name="blank">   </string>
    <string name="about_healthserve">About Health Serve</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="blood_group">Blood Group</string>
    <string name="allergies">Allergies</string>
    <string name="primary_medical_conditions">Primary Medical Conditions</string>     
    
    <string name="eyes">Eyes</string>
    <string name="ears">Ears</string>
    <string name="nose">Nose</string>
    <string name="mouth">Mouth</string>
    <string name="teeth">Teeth</string> 
    <string name="face">Face</string> 
    
    <string name="pateint">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="reason">Reason</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="confirm">Confirm</string>
    <string name="view_profile">View Profile</string>
    
	<string name="tab_upcoming">Upcoming</string>
	<string name="tab_past">Past</string>
	
	<string name="no_upcoming">No Upcoming Appointments</string>
	<string name="no_past">No Past Appointments</string>

</resources>
