<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical" >

        <hsd.symptom.checker.textview.RalewayTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/pateint"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary" />

        <hsd.symptom.checker.textview.RalewayTextView
            android:id="@+id/textViewPatientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <hsd.symptom.checker.textview.RalewayTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/doctor"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary" />

        <hsd.symptom.checker.textview.RalewayTextView
            android:id="@+id/textViewDoctorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <hsd.symptom.checker.textview.RalewayTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/reason"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary" />

        <hsd.symptom.checker.textview.RalewayTextView
            android:id="@+id/textViewReason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <hsd.symptom.checker.textview.RalewayTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary" />

        <hsd.symptom.checker.textview.RalewayTextView
            android:id="@+id/textViewPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <hsd.symptom.checker.textview.RalewayTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary" />

        <hsd.symptom.checker.textview.RalewayTextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <hsd.symptom.checker.textview.RalewayTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary" />

        <hsd.symptom.checker.textview.RalewayTextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton_confirm_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewConfirm"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/confirm_appointment" />

    <hsd.symptom.checker.textview.RalewayTextView
        android:id="@+id/textViewConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

</RelativeLayout>