<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="110dp"
                android:layout_height="70dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/health_serve" />
        </LinearLayout>

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="240dp"
            android:layout_height="42dp"
            android:layout_margin="3dp"
            android:background="@drawable/light_green_background"
            android:drawableLeft="@drawable/name_png"
            android:drawableStart="@drawable/name_png"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:textColor="@android:color/black" >
        </EditText>

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="240dp"
            android:layout_height="42dp"
            android:layout_margin="3dp"
            android:background="@drawable/light_green_background"
            android:drawableLeft="@drawable/email_png"
            android:drawableStart="@drawable/email_png"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black" >
        </EditText>

        <EditText
            android:id="@+id/editText_mobile"
            android:layout_width="240dp"
            android:layout_height="42dp"
            android:layout_margin="3dp"
            android:background="@drawable/light_green_background"
            android:drawableLeft="@drawable/phone_png"
            android:drawableStart="@drawable/phone_png"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/mobile_hint"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@android:color/black" >
        </EditText>

        <EditText
            android:id="@+id/editText_gender"
            android:layout_width="240dp"
            android:layout_height="42dp"
            android:layout_margin="3dp"
            android:background="@drawable/light_green_background"
            android:clickable="true"
            android:cursorVisible="false"
            android:drawableLeft="@drawable/gender_png"
            android:drawableStart="@drawable/gender_png"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@android:color/black" >
        </EditText>

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="240dp"
            android:layout_height="42dp"
            android:layout_margin="3dp"
            android:background="@drawable/light_green_background"
            android:drawableLeft="@drawable/password_png"
            android:drawableStart="@drawable/password_png"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pass_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/black" >
        </EditText>

        <EditText
            android:id="@+id/editText_reenter_password"
            android:layout_width="240dp"
            android:layout_height="42dp"
            android:layout_margin="3dp"
            android:background="@drawable/light_green_background"
            android:drawableLeft="@drawable/password_png"
            android:drawableStart="@drawable/password_png"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/re_enter_pass_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/black" >
        </EditText>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="240dp"
            android:layout_height="42dp"
            android:layout_margin="3dp"
            android:text="@string/submit"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>